# Tongsuo

./: .gitignore  CHANGES.md  Configure  INSTALL.md  NOTES-PERL.md  README.en.md  README.md  build.info  builddata.pm  configdata.pm.in  installdata.pm
.claude/: settings.local.json
.github/workflows/: ci.yml  cross-compiles.yml  os-zoo.yml  run-checker-ci.yml  run-checker-daily.yml
Configurations/: 00-base-templates.conf  10-main.conf  README.md  unix-Makefile.tmpl  windows-makefile.tmpl
apps/: build.info  ca.c  crl2pkcs7.c  delecred.c  dgst.c  enc.c  errstr.c  gendsa.c  list.c  nseq.c  ocsp.c  openssl.c  openssl.cnf  pkcs12.c  pkeyparam.c  pkeyutl.c  prime.c  progs.pl  rand.c  rehash.c  req.c  s_client.c  s_server.c  sm2_threshold.c  speed.c  verify.c  version.c  x509.c
apps/include/: apps.h  http_server.h  log.h  opt.h  platform.h  s_apps.h
apps/lib/: app_rand.c  apps.c  build.info  http_server.c  opt.c  s_cb.c  s_socket.c
crypto/: LPdir_unix.c  arm64cpuid.pl  build.info  context.c  ctype.c  cversion.c  info.c  init.c  loongarchcap.c  mem.c  o_fopen.c  params_idx.c  provider.c  provider_core.c  ssl_err.c  trace.c
crypto/aes/: build.info
crypto/asn1/: a_verify.c  asn1_item_list.h  asn_mime.c  i2d_evp.c  p5_pbev2.c  p5_scrypt.c  x_delegated_credential.c
crypto/async/: async.c
crypto/ml_dsa/asm/ml_dsa_avx2/: .gitignore  CMakeLists.txt  PQCgenKAT_sign.c  align.h  api.h  config.h  hybrid.c  hybrid.h  ml_dsa_avx2_target.h  packing.c  packing.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  pspm.c  pspm.h  randombytes.c  rejsample.c  rejsample.h  rounding.c  rounding.h  sign.c
crypto/ml_dsa/asm/ml_dsa_avx2/keccak4x/: KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h  fips202x4.c  fips202x4.h  symmetric.h
crypto/ml_dsa/asm/ml_dsa_avx2/ntt/: cdecl.h  consts.c  consts.h  intt_avx2.c  ntt.h  ntt_avx2.c
crypto/ml_dsa/asm/ml_dsa_avx2/test/: test_dilithium.c  test_speed.c
doc/: build.info  perlvars.pm
engines/: build.info  e_devcrypto.c  e_loader_attic.c  e_ossltest.c  e_padlock.c
examples/: sm.c
exporters/: libcrypto.pc  libssl.pc  openssl.pc
fuzz/: README.md  oids.txt  punycode.c
providers/: build.info  decoders.inc  defltprov.c  encoders.inc  fips-sources.checksums  fips.module.sources  legacyprov.c
ssl/: bio_ssl.c  build.info  s3_lib.c  ssl_asn1.c  ssl_cert.c  ssl_cert_table.h  ssl_ciph.c  ssl_conf.c  ssl_dc.c  ssl_lib.c  ssl_local.h  ssl_rsa.c  ssl_sess.c  ssl_stat.c  t1_enc.c  t1_lib.c  t1_trce.c  tls_depr.c
test/: README-external.md  README.md  asn1_time_test.c  asynctest.c  babasslapitest.c  bio_prefix_text.c  bntest.c  build.info  cipherlist_test.c  ciphername_test.c  conf_include_test.c  ectest.c  evp_extra_test.c  evp_extra_test2.c  evp_kdf_test.c  evp_pkey_ctx_new_from_name  evp_test.c  ext_internal_test.c  json_test.c  ossl_store_test.c  p_test.c  params_api_test.c  params_conversion_test.c  pkcs12_api_test.c  pkcs12_format_test.c  provider_test.c  quicapitest.c  run_tests.pl  smtc_rand_self_test.c  ssl_cert_table_internal_test.c  ssl_ntls_api_test.c  ssl_old_test.c  ssl_test.c  sslapitest.c  testec-sm2.pem  tls13groupselection_test.c  trace_api_test.c  verify_extra_test.c
util/: add-depends.pl  find-doc-nits  indent.pro  libcrypto.num  libssl.num  markdownlint.rb  missingcrypto.txt  missingcrypto111.txt  missingssl.txt  mk_symbol_prefix.pl  mkdef.pl  mkerr.pl  other.syms  wrap.pl.in
(+396 files in other folders)
